objects/Quote_Integration_Job__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Processing__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique Opportunity Id</inlineHelpText>
        <label>Opportunity</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Published_Date__c</fullName>
        <label>Published Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REST_API_Start_Date__c</fullName>
        <label>REST API Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>REST_API_Time_Diff_sec__c</fullName>
        <formula>(  End_Date__c  -  REST_API_Start_Date__c  ) * 24 * 60 * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REST API Time Diff(sec)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Time_Diff_sec__c</fullName>
        <formula>( End_Date__c - Start_Date__c ) * 24 * 60 * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time Diff(sec)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>Master jobs table for tracking currently in-progress Quote Integrations for Opportunity CCW BOM integration.</description>
    <label>Quote Integration Job</label>
    <nameField>
        <displayFormat>QI-{00000000}</displayFormat>
        <label>Quote Integration Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Integration Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Quote__c</columns>
        <columns>Published_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Is_Processing__c</columns>
        <columns>Start_Date__c</columns>
        <columns>REST_API_Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>REST_API_Time_Diff_sec__c</columns>
        <columns>Total_Time_Diff_sec__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <validationRules>
        <fullName>Processing_Turn_Off_By_Same_Quote</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED(Is_Processing__c) &amp;&amp; ISCHANGED(Quote__c)</errorConditionFormula>
        <errorMessage>A Quote Integration Job can only be processed/completed by the same Quote</errorMessage>
    </validationRules>
</CustomObject>